--- a/style.css
+++ b/style.css
@@ -1,1 +1,6 @@
-
+html {
+  background-color: rgb(20,20,20);
+  color: rgb(180,180,180);
+  font-size: 20px;
+  font-family: 'Courier Prime', monospace;
+}
